2008-05-15 Andreas Schmitz <schmitz@lat-lon.de>
      src/org/openjump/core/ui/plugin/style/ImportSLDPlugIn.java,
      src/org/openjump/util/SLDImporter.java:
      Fixed SLD import for long/int values. There are shape files
      that result in Integer values, and there are shape files that
      result in Long values. But the java type of the attribute type
      is always Integer!

2008-05-15 Andreas Schmitz <schmitz@lat-lon.de>
      src/org/openjump/core/ui/plugin/style/ImportSLDPlugIn.java:
      Refactored the plugin so the main logic can be used by
      other SLD providers such as external tools.

2008-05-13 Andreas Schmitz <schmitz@lat-lon.de>
      src/org/openjump/core/ui/plugin/style/ImportSLDPlugIn.java,
      src/org/openjump/util/SLDImporter.java:
      Fixed problems choosing the imported color theming style.

2008-05-13 Andreas Schmitz <schmitz@lat-lon.de>
      src/org/openjump/core/ui/plugin/style/ImportSLDPlugIn.java,
      src/org/openjump/util/SLDImporter.java:
      Improved/re-added SLD import of color theming styles.

2008-05-11 mentaer <sstein@geo.unizh.ch>
      Added patch from Jakko which enables basic use of tables in 
      other than public schema. (bug 1694304, at least partly)
      changed
      com.vividsolutions.jump.datastore.postgis.PostgisDSMetadata
      
2008-05-11 mentaer <sstein@geo.unizh.ch>
      Added patch from Jakko which allows use of WMS servers protected 
      with basic HTTP authentication. Credentials are taken from URL, 
      which can be entered as 'http://user:password@server/path'
      changed
      com.vividsolutions.wms.MapRequest
      com.vividsolutions.wms.WMService

2008-05-11 mentaer <sstein@geo.unizh.ch>
      Added new function to intersect two layers that contain
      polygons under /Tools/Analysis/. The function allows in
      a second step to transfer the attributes from both
      source layers.
      Added:
      org.openjump.core.geomutils.algorithm.IntersectGeometries